--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.24.2
+numpy
 Pillow==9.5.0
 requests==2.28.2
 SQLAlchemy==1.4.46
